# SCPPSocketTest

./: CMakeLists.txt  main.cpp
Includes/: NetManager.cpp  SCPPSocket.h  TCPServerConnection.h  UDPConnection.h
Includes/Mac/: TCPClientNetManagerWorkerMac.cpp  TCPServerNetManagerWorkerMac.cpp
Includes/Win/: SCPPSocketWin.cpp  TCPClientNetManagerWorkerWin.cpp  TCPServerNetManagerWorkerWin.cpp
Includes/lib/: SCPPSocketWin.lib
Lib/: SCPPSocketWin.lib
